--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,10 @@
 <body>
   <header>Te damos la bienvenida</header>
   <img src="view/assets/img/comunal-logo.png" alt="logo comunal">
-  <div id="optionsContainer" >
-    <button class="indexButtons" id="checkoutButton"> <img class="arrowIcons" src="view/assets/img/back.png" alt="right icon"> check out</button>
-    <button class="indexButtons" id="checkinButton"> check in <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> </button>
-  </div>
+   <button class="indexButtons" id="registerButton"> PRIMERA VISITA <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> </button>
+ 
 
-  <button id="registerButton"><img id="userIcon" src="view/assets/img/user.png" alt="user icon"> <a>Ya estuve aquí</a></button>
+   <button id="checkoutButton"><img id="outIcon" src="view/assets/img/export.png" alt="go out icon"> <a>Registrar salida</a></button>
     
 
     <script src="controller/index.js"></script>
