--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Registro de visitante</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="view/assets/css/index.css" /> 
+  <link rel="stylesheet" type="text/css" media="screen" href="view/assets/css/index.css" />
 </head>
+
 <body>
   <header>Te damos la bienvenida</header>
-  <img src="view/assets/img/comunal-logo.png" alt="logo comunal">
-   <button class="indexButtons" id="registerButton"> PRIMERA VISITA <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> </button>
- 
-
-   <button id="checkoutButton"><img id="outIcon" src="view/assets/img/export.png" alt="go out icon"> <a>Registrar salida</a></button>
+  <div class="containerLogo"><img src="view/assets/img/comunal-logo.png" alt="logo comunal"></div>
+  <div class="containerButtons">
+    <div class="containerIndexButton">
+      <button class="indexButtons" id="registerButton"> Registrar visitante
+        <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> 
+      </button>
+      <button class="buttonAdminView" id="buttonAdminView">Vista de administrador</button>
+    </div>
     
+    <button id="checkoutButton">
+      <img id="outIcon" src="view/assets/img/export.png" alt="go out icon">
+      <a>Registrar salida</a>
+    </button>
 
-    <script src="controller/index.js"></script>
+  </div>
+
+  <script src="controller/index.js"></script>
 </body>
+
 </html>
