interfaz index terminada

--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,20 @@
   <link rel="stylesheet" type="text/css" media="screen" href="view/assets/css/index.css" /> 
 </head>
 <body>
-  <div id="buttonsContainer">
-    <button class="indexButtons" id="adm">Soy administrador</button>
-    <button class="indexButtons" id="visits">Primera visita y registro de salida</button>
+  <div id="container">
+      <div class="imagenContainer">
+          <img src="view/assets/img/comunal-logo.png" alt="logo comunal">
+      </div>
+    <div id="buttonsIndex">
+        <button class="indexButtons" id="adm"> <img class="arrowIcons" src="view/assets/img/back.png">  Vista de administrador</button>
+        <button class="indexButtons" id="visits">Vista de usuario  <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> </button>
+    </div>
+   
   </div>
 
   <div id="indexContainer">
     <header>Te damos la bienvenida</header>
-    <div id="imagenContainer">
+    <div class="imagenContainer">
       <img src="view/assets/img/comunal-logo.png" alt="logo comunal">
     </div>
     <button class="indexButtons" id="registerButton"> PRIMERA VISITA <img class="arrowIcons" src="view/assets/img/right-arrow.png" alt="right icon"> </button>
