centra mensaje de error debajo de cámara

--- a/src/index.html
+++ b/src/index.html
@@ -61,9 +61,9 @@
           <div class="row mt-5 justify-content-center">
             <h6 class="col-12 text-center card-title">¡Tomate una foto!</h6>
             <video id="video" class="col-12 mt-5 p-0" height="250px"></video>
-            <div class="col-7">
-              <div class="invalid-feedback " id="invalidFeedback">Por favor verifica que tus datos sean correctos</div>
-            </div>
+            <!-- <div class="col-7"> -->
+              <div class="invalid-feedback col-md-5" id="invalidFeedback">Por favor verifica que tus datos sean correctos</div>
+            <!-- </div> -->
             <canvas id="canvas" class="d-none" height="250px" ; width="250px"></canvas>
           </div>
           <div class="row d-flex justify-content-center m-5">
